modal fix on mobile

--- a/src/app/styles/components/modal.module.scss
+++ b/src/app/styles/components/modal.module.scss
@@ -43,3 +43,11 @@
     }
   }
 }
+
+@media (max-width: 1050px) {
+  .modal {
+    .modalContainer {
+      width: 95vw;
+    }
+  }
+}
